--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,11 +32,15 @@ android {
 
 dependencies {
     implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.1.0'
+    implementation 'com.google.firebase:firebase-crashlytics-buildtools:2.8.1'
 
     // https://mvnrepository.com/artifact/org.projectlombok/lombok
     compileOnly group: 'org.projectlombok', name: 'lombok', version: '1.18.22'
     // https://mvnrepository.com/artifact/com.squareup.retrofit2/retrofit
     implementation group: 'com.squareup.retrofit2', name: 'retrofit', version: '2.9.0'
+
+    // dependency file for Volley
+    implementation 'com.android.volley:volley:1.2.1'
 
     implementation 'com.google.android.material:material:1.3.0-alpha02'
     implementation 'androidx.appcompat:appcompat:1.3.0'
