--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,16 +14,12 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.BalanceSheet">
+        android:theme="@style/Theme.BalanceSheet"
+        android:usesCleartextTraffic="true">
         <activity
             android:name=".SettingsActivity"
             android:exported="false"
             android:label="@string/title_activity_settings"
-            android:theme="@style/Theme.BalanceSheet.NoActionBar" />
-        <activity
-            android:name=".DatabaseActivity"
-            android:exported="false"
-            android:label="@string/title_activity_database"
             android:theme="@style/Theme.BalanceSheet.NoActionBar" />
         <activity
             android:name=".MainActivity"
