--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,6 +42,13 @@ dependencies {
     // dependency file for Volley
     implementation 'com.android.volley:volley:1.2.1'
 
+    // for Card view
+    implementation 'androidx.cardview:cardview:1.0.0'
+
+    // Chart and graph library
+    implementation 'com.github.blackfizz:eazegraph:1.2.5l@aar'
+    implementation 'com.nineoldandroids:library:2.4.0'
+
     implementation 'com.google.android.material:material:1.3.0-alpha02'
     implementation 'androidx.appcompat:appcompat:1.3.0'
     implementation 'com.google.android.material:material:1.4.0'
