--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,6 +13,11 @@ android {
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+
+        //renaming app-debug.apk to ...
+        //archivesBaseName = "Balancesheet" + versionName
+        archivesBaseName = "Balancesheet"
+        setProperty("archivesBaseName", archivesBaseName)
     }
 
     buildTypes {
