* changed location to position * added address as location * changed python flask app.py * new apk

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,6 +33,7 @@ android {
     buildFeatures {
         viewBinding true
     }
+    namespace 'at.co.netconsulting.balancesheet'
 }
 
 dependencies {
