* pieChart moved to own activity, will be changed to barChart later * toolBar adapted * return fabIcon introduced * provisional barchart created * new apk

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,9 +32,9 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".BarChartAllMonths"
+            android:name=".BarChartActivity"
             android:exported="false"
-            android:label="@string/title_barchartallmonths"
+            android:label="@string/title_barchart"
             android:theme="@style/Theme.BalanceSheet.NoActionBar" />
     </application>
 
