* MainScreen.kt: currency conversion dialog integrated * MainViewModel.kt: automatic currency detection and conversion confirmation flow implemented * MainUiState.kt: currency conversion state fields added * CurrencyConversionDialog.kt: new dialog component for showing conversion details before saving * ic_launcher.xml, ic_launcher_round.xml: switched to vector drawable for green-themed app icon * app.py, docker-compose.xml, init.sql, requirements.txt: backend updates * BalanceSheetRepository.kt: repository enhancements * Position.kt, TaxCategory.kt: new enum files added * EntryDetailsDialog.kt, EntryListDialog.kt, SettingsScreen.kt: minor UI improvements * IncomeExpense.kt, Location.kt: data model updates * build.gradle: bump version to 2.0 with changes for notifying if country is a non-eu country and currency conversion is detected; excel files for tax lawyer is done automatically

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,7 +12,7 @@ android {
         minSdk 34
         targetSdk 35
         versionCode 1
-        versionName "1.3 (remove of unnecessary Expense entry)"
+        versionName "2.0 (Excel files on backend side generated automatically; info if being in a non-eu country and currency conversion is done automatically)"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         vectorDrawables {
