* arbeitnehmerveranlagung.py: wohnraumschaffung removed * Position.kt: einkommen added; fachliteratur moved * build.gradle: bump to version 2.3 with Einkommen added as a new position; Wohnraumschaffung removed

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,7 +12,7 @@ android {
         minSdk 34
         targetSdk 35
         versionCode 1
-        versionName "2.2 (rows for overview in MainScreen removed)"
+        versionName "2.3 (Einkommen added as a new position; Wohnraumschaffung removed)"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         vectorDrawables {
