* einnahmen_ausgaben.py: added python script for complete overview * build.gradle: bump to version 2.8

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,7 +12,7 @@ android {
         minSdk 34
         targetSdk 35
         versionCode 1
-        versionName "2.7 (Categories and Subcategories added)"
+        versionName "2.8 (python script added for complete overview)"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         vectorDrawables {
