* EntryListItem.kt: show comment field in 'Recent Entries' * MainViewModel.kt: show last 10 entries in 'Recent Entries' * RecentEntriesCard.kt: 'Recent Entries' is scrollable, and shows the last 10 entries * build.gradle: 'Recent Entries' shows comment field, and shows last 10 entries, and is scrollable; bumped to version 3.01

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,7 +12,7 @@ android {
         minSdk 34
         targetSdk 35
         versionCode 1
-        versionName "3.00 (complete makeover of layout)"
+        versionName "3.01 ('Recent Entries' made scrollable; added comment field as output to 'Recent Entries')"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         vectorDrawables {
@@ -42,6 +42,11 @@ android {
     packaging {
         resources {
             excludes += '/META-INF/{AL2.0,LGPL2.1}'
+        }
+    }
+    applicationVariants.all { variant ->
+        variant.outputs.all {
+            outputFileName = "balancesheet.apk"
         }
     }
 }
