* BalanceSheetWidget.kt: Implement GlanceAppWidget with 2x2 summary grid (income/spending/savings/food) and scrollable list of last 10 entries * BalanceSheetWidgetReceiver.kt: Add GlanceAppWidgetReceiver that schedules periodic refresh via WorkManager * WidgetRefreshWorker.kt: Add CoroutineWorker to refresh all widget instances every 15 minutes * balance_sheet_widget_info.xml: Define widget metadata (4x3 cells, resizable, 30min update period) * widget_loading.xml: Add initial loading layout shown before Glance renders * AndroidManifest.xml: Register widget receiver with APPWIDGET_UPDATE intent filter * strings.xml: Add widget name and description strings * MainViewModel.kt: Trigger widget update after successful data refresh * build.gradle: Add Glance 1.1.1 and WorkManager 2.10.0 dependencies for home screen widget; bumped to version: 3.05

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,7 +13,7 @@ android {
         minSdk 34
         targetSdk 35
         versionCode 1
-        versionName "3.04 (check cached GPS location first, then network cache, if both are empty, fallback to request a fresh location from Netwrk provider)"
+        versionName "3.05 (added widget to homescreen)"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         vectorDrawables {
@@ -75,4 +75,11 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.8.7"
     // ViewModel utilities for Compose
     implementation "androidx.lifecycle:lifecycle-viewmodel-compose:2.8.7"
+
+    // Glance (AppWidget with Compose-like API)
+    implementation "androidx.glance:glance-appwidget:1.1.1"
+    implementation "androidx.glance:glance-material3:1.1.1"
+
+    // WorkManager for periodic widget refresh
+    implementation "androidx.work:work-runtime-ktx:2.10.0"
 }
